refactored the code added pretty errors

--- a/Jira_User_add/Views/Shared/_Layout.cshtml
+++ b/Jira_User_add/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    <!--sweetalert-->
+    <script src="https://lipis.github.io/bootstrap-sweetalert/lib/sweet-alert.js"></script>
+    <link rel="stylesheet" href="https://lipis.github.io/bootstrap-sweetalert/lib/sweet-alert.css">
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
