--- a/Jira_User_add/Views/Home/Index.cshtml
+++ b/Jira_User_add/Views/Home/Index.cshtml
@@ -60,14 +60,14 @@
         <div class="form-group">
             @Html.Label("jira-developers", new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                <input type="checkbox" name="role" value="jira-developers"/>
+                <input type="checkbox" name="roles" value="jira-developers"/>
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("jira-users", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="checkbox" name="role" value="jira-users" />
+                <input type="checkbox" name="roles" value="jira-users" />
             </div>
         </div>
         <div class="form-group">
